# airline-price-prediction-model

./: Flight_price.ipynb  Flight_price.py  Flight_price_streamlit.py  README.md  pyproject.toml
