[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Harsha malikireddyharshavardhanreddy.com>"]
readme = "README.md"
packages = [{include = "maincode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
